# FrAD_Python

./: .gitattributes  .gitignore  LICENSE.md  README-JP.md  README-KR.md  README.md  a.py  install.sh  jsontoffmeta.py  oh no.py  pyproject.toml  update.sh
C/src/include/: FFpath.h  Fourier.h
C/src/lib/: FFpath.c  Fourier.c  encode.c
Examples/: decode.sh  ecc.sh  encode.sh  meta.json  modify.sh  parse.sh  play.sh
Java/: build.gradle  settings.gradle
LICENCE/: LICENCE-EN.md  LICENCE-JP.md  LICENCE-KR.md
LICENSE/: LICENSE-EN.md  LICENSE-JP.md  LICENSE-KR.md  LICENSE.md
Python/: fourierAnalogue.py  main.py  requirements.txt
Python/fra/: __init__.py  common.py  cosine.py  decoder.py  encoder.py  ffpath.py  fourier.py  header.py  player.py  repack.py
Python/fra/tools/: comment_block.py  dsd.py  ecc.py  ffprobe.AArch64  ffprobe.macOS  headb.py
Python/fva/: __init__.py  decoder.py  encoder.py  header.py  header_mod.py  parser.py  player.py  repack.py
Python/fva/tools/: ecc.py  (+2 more)
README/: README-EN.md  README-JP.md  README-KR.md
src/: __main__.py  common.py  decoder.py  encoder.py  header.py  main.py  repairer.py  requirements.txt
src/FrAD/: DCT.rs  __init__.py  common.py  decoder.py  encoder.py  fourier.py  header.py  player.py  record.py  repack.py
src/fra/: common.py  decoder.py  encoder.py  fourier.py  header.py  lossy_psycho.py  player.py  record.py  repack.py
src/help/: decode.txt  encode.txt  general.txt  metadata.txt  play.txt  record.txt
src/libfrad/: __init__.py  common.py  decoder.py  encoder.py  repairer.py
src/tools/: cli.py  process.py
(+70 files in other folders)
