[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frad-py"
version = "0.0.0"
authors = [{name = "HaמuL"}]

[tool.setuptools]
package-dir = { "frad_py" = "src", "libfrad" = "src/libfrad" }
packages = [ "frad_py", "libfrad" ]

[project.scripts]
frad-py = "frad_py.main:main"