[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frad"
version = "0.0.0"
authors = [{name = "HaƞuL"}]
dependencies = [
    "numpy",
    "scipy",
    "reedsolo",
    "filetype",
    "sounddevice",
]

[tool.setuptools]
package-dir = { "frad" = "src", "libfrad" = "src/libfrad" }
packages = [
    "frad",
    "frad.tools",
    "frad.help",

    "libfrad",
    "libfrad.backend",
    "libfrad.fourier",
    "libfrad.fourier.tools",
    "libfrad.tools"
]

[tool.setuptools.package-data]
"frad.help" = ["*.txt"]

[project.scripts]
frad-py = "frad.main:main"
